--- a/Day2/Webappdemo/templates/apply.html
+++ b/Day2/Webappdemo/templates/apply.html
@@ -77,7 +77,7 @@
 			    </div>
 			  </div>
 			  <button type="submit" class="btn btn-primary" style="margin-left:130px;">Submit</button>
-			  <p class="worddark">Display the details<a  href="/display">clickhere here</a></p>
+			  <p class="worddark">Display the details<a  href="/display">click here</a></p>
 			{{account}}
 			</form>
 			
